[package]
name = "bufro"
description = "2D vector graphics with C and Rust API"
version = "0.1.7"
license = "GPL-3.0"
readme = "README.md"
authors = ["Aspect"]
keywords = ["graphics", "canvas", "drawing", "gpu", "opengl"]
categories = ["graphics"]
repository = "https://github.com/UE2020/bufro"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.9.0"
cgmath = "0.18.0"
libc = "0.2.94"

[dev-dependencies]
glutin = "0.26.0"
