[package]
name = "bufro"
description = "2D vector graphics with C and Rust API"
version = "0.1.7"
license = "GPL-3.0"
readme = "README.md"
authors = ["Aspect"]
keywords = ["graphics", "canvas", "drawing", "gpu", "opengl"]
categories = ["graphics"]
repository = "https://github.com/UE2020/bufro"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
winit = "0.25"
wgpu = "0.10.1"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
lyon = "0.17.5"
ordered-float = "2.7.0"
slotmap = "1.0.5"