[package]
name = "bufro"
description = "2D vector graphics with C and Rust API"
version = "0.2.10"
license = "GPL-3.0"
readme = "README.md"
authors = ["Aspect"]
keywords = ["graphics", "canvas", "drawing", "gpu", "opengl"]
categories = ["graphics"]
repository = "https://github.com/UE2020/bufro"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
wgpu = "0.11.0"
log = "0.4"
pollster = "0.2"
bytemuck = { version = "1.4", features = ["derive"] }
lyon = "0.17.5"
ordered-float = "2.7.0"
owned_ttf_parser = "0.12.1"
libc = "0.2.101"
raw-window-handle = "0.3.3"

[dev-dependencies]
winit = "0.25"
env_logger = "0.9"
rand = "0.8.4"